src/objects/Initiative__c.object
<CustomObject>
    <fields>
        <fullName>Article_Customer_Facing_Hours__c</fullName>
        <label>Article (Customer-Facing) Hours</label>
        <summarizedField>Shared_Services_Requests__c.Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>Shared_Services_Requests__c.Project_Request_Type__c</field>
            <operation>equals</operation>
            <value>Article (Customer-Facing)</value>
        </summaryFilterItems>
        <summaryForeignKey>Shared_Services_Requests__c.Initiative__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Article_Internal_Hours__c</fullName>
        <label>Article (Internal) Hours</label>
        <summarizedField>Shared_Services_Requests__c.Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>Shared_Services_Requests__c.Project_Request_Type__c</field>
            <operation>equals</operation>
            <value>Article (Internal)</value>
        </summaryFilterItems>
        <summaryForeignKey>Shared_Services_Requests__c.Initiative__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Communication_Hours__c</fullName>
        <label>Communication Hours</label>
        <summarizedField>Shared_Services_Requests__c.Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>Shared_Services_Requests__c.Project_Request_Type__c</field>
            <operation>equals</operation>
            <value>Communication</value>
        </summaryFilterItems>
        <summaryForeignKey>Shared_Services_Requests__c.Initiative__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Call_Library__c</fullName>
        <label>Count of Call Library</label>
        <summaryForeignKey>Call_Library__c.Initiative__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_of_Hours__c</fullName>
        <label>Sum of Hours</label>
        <summarizedField>Shared_Services_Requests__c.Hours_Worked__c</summarizedField>
        <summaryForeignKey>Shared_Services_Requests__c.Initiative__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Customer_Care_Hours__c</fullName>
        <label>Total Customer Care Hours</label>
        <summarizedField>Shared_Services_Requests__c.Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>Shared_Services_Requests__c.Requesting_Department__c</field>
            <operation>equals</operation>
            <value>Customer Care</value>
        </summaryFilterItems>
        <summaryForeignKey>Shared_Services_Requests__c.Initiative__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Fulfillment_Hours__c</fullName>
        <label>Total Fullfilment Hours</label>
        <summarizedField>Shared_Services_Requests__c.Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>Shared_Services_Requests__c.Requesting_Department__c</field>
            <operation>equals</operation>
            <value>Fulfillment</value>
        </summaryFilterItems>
        <summaryForeignKey>Shared_Services_Requests__c.Initiative__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Marketing_Hours__c</fullName>
        <label>Total Marketing Hours</label>
        <summarizedField>Shared_Services_Requests__c.Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>Shared_Services_Requests__c.Requesting_Department__c</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </summaryFilterItems>
        <summaryForeignKey>Shared_Services_Requests__c.Initiative__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Hours__c</fullName>
        <label>Total Sales Hours</label>
        <summarizedField>Shared_Services_Requests__c.Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>Shared_Services_Requests__c.Requesting_Department__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </summaryFilterItems>
        <summaryForeignKey>Shared_Services_Requests__c.Initiative__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Shared_Services_Hours__c</fullName>
        <label>Total Shared Services Hours</label>
        <summarizedField>Shared_Services_Requests__c.Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>Shared_Services_Requests__c.Requesting_Department__c</field>
            <operation>equals</operation>
            <value>Shared Services</value>
        </summaryFilterItems>
        <summaryForeignKey>Shared_Services_Requests__c.Initiative__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Tech_Hours__c</fullName>
        <label>Total Tech Hours</label>
        <summarizedField>Shared_Services_Requests__c.Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>Shared_Services_Requests__c.Requesting_Department__c</field>
            <operation>equals</operation>
            <value>Tech</value>
        </summaryFilterItems>
        <summaryForeignKey>Shared_Services_Requests__c.Initiative__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Training_Delivery_Hours__c</fullName>
        <label>Training Delivery Hours</label>
        <summarizedField>Shared_Services_Requests__c.Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>Shared_Services_Requests__c.Project_Request_Type__c</field>
            <operation>equals</operation>
            <value>Training Delivery</value>
        </summaryFilterItems>
        <summaryForeignKey>Shared_Services_Requests__c.Initiative__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Training_Materials_Hours__c</fullName>
        <label>Training Materials Hours</label>
        <summarizedField>Shared_Services_Requests__c.Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>Shared_Services_Requests__c.Project_Request_Type__c</field>
            <operation>equals</operation>
            <value>Training Materials</value>
        </summaryFilterItems>
        <summaryForeignKey>Shared_Services_Requests__c.Initiative__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Workforce_Management_Hours__c</fullName>
        <label>Workforce Management Hours</label>
        <summarizedField>Shared_Services_Requests__c.Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>Shared_Services_Requests__c.Project_Request_Type__c</field>
            <operation>equals</operation>
            <value>Workforce Management</value>
        </summaryFilterItems>
        <summaryForeignKey>Shared_Services_Requests__c.Initiative__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Initiative</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Initiative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Initiatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>